# Glass_GEM_analysis

./: .gitignore  README.md  pyproject.toml
conf/: README.md  event_catalog.default.json  event_catalog.example.json
scripts/: README.md  build_event_catalog.py  check_waveform.py  merge_event_catalog.py  plot_dt_ggem_nim.py  plot_event_catalog.py  plot_integ_maxv.py  plot_integ_maxv_corr.py  plot_trend_sn_spark.py  summarize_runs.py
scripts/modules/: __init__.py  catalog_hist.py  catalog_merge.py  catalog_plot_common.py  catalog_plot_dt.py  catalog_plot_integ_maxv.py  catalog_plot_integ_maxv_corr.py  catalog_plot_trend.py  catalog_run_summary.py  check_waveform_viewer.py  cli_common.py  common.py  event_catalog.py  event_catalog_baseline.py  event_catalog_debug.py  event_catalog_io.py  event_catalog_run.py  event_catalog_schema.py  project_matplotlib_rc.py
