[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glassgem-analysis"
version = "0.1.0"
description = "GlassGEM waveform analysis (event catalog, I/O, spectrum helpers)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "tqdm>=4.0",
]

[project.optional-dependencies]
catalog = ["lmfit>=1.2"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7"]

[project.scripts]
decode-event-catalog = "modules.event_catalog:main"
check-waveform = "modules.check_waveform_viewer:main"
plot-integ-maxv = "modules.catalog_plot_integ_maxv:main"
plot-integ-maxv-corr = "modules.catalog_plot_integ_maxv_corr:main"
plot-dt-ggem-nim = "modules.catalog_plot_dt:main"
plot-trend-sn-spark = "modules.catalog_plot_trend:main"
merge-event-catalog = "modules.catalog_merge:main"
summarize-runs = "modules.catalog_run_summary:main"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
